--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,3 +171,6 @@ reformat = true
 [tool.snippet-fmt.languages.ini]
 
 [tool.snippet-fmt.languages.json]
+
+[tool.dep_checker.name_mapping]
+wxpython = "wx"
