--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,10 @@ setenv =
     PYTHONDEVMODE=1
     PIP_DISABLE_PIP_VERSION_CHECK=1
     SETUPTOOLS_USE_DISTUTILS=stdlib
-deps = importcheck>=0.1.0
+deps =
+    importcheck>=0.1.0
+    wxpython>=4.0.7,<4.2.0; platform_system == "Windows" and python_version < "3.9"
+    wxpython>=4.0.7,<4.2.0; platform_system == "Darwin" and python_version < "3.9"
 commands =
     python --version
     python -m importcheck {posargs:--show}
