Add py.typed marker.

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ classifiers =
     Topic :: Desktop Environment :: Gnome
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: Software Development :: User Interfaces
+    Typing :: Typed
 
 [options]
 python_requires = >=3.7
